# raytracing_render

./: CMakeLists.txt  Model.cpp  Model.h  ModelOBJ.h  README.md  main.cpp
